Changed the tmux-256color to screen-256color tmux config setting, in order to make it work on macOS

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,7 @@ bind -r L resize-pane -R 5  # 5px bigger right
 
 
 # Enable True Color
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
 
