Fixed some formatting, added new options, and a new tmux theme (my own - noirblaze)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,7 +37,8 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 
 # Tmux Theme
-source-file "~/Dev-Config/tmux-theme/challenger-deep.tmuxtheme"
+source-file "~/Dev-Config/tmux-theme-noirblaze/noirblaze-tmux.dark.default.v0.tmuxtheme"
+#source-file "~/Dev-Config/tmux-theme/challenger-deep.tmuxtheme"
 
 
 # Plugins (should be at the bottom)
