Fixed issues and added some plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,8 @@ set -g mouse on
 set -g base-index 1
 set -g pane-base-index 1
 
+# Enable vi key bindings
+setw -g mode-keys vi
 
 # Split panes using | and -
 bind | split-window -h
