--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,9 +38,30 @@ set -ga terminal-overrides ",*256col*:Tc"
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 
-# Tmux Theme
-source-file "~/Dev-Config/tmux-theme-noirblaze/noirblaze-tmux.dark.default.v0.tmuxtheme"
+# Theme
+#source-file "~/Dev-Config/tmux-theme-noirblaze/noirblaze-tmux.dark.default.v0.tmuxtheme"
 #source-file "~/Dev-Config/tmux-theme/challenger-deep.tmuxtheme"
+set -g pane-border-fg colour0
+set -g pane-active-border-fg colour238
+bind-key b set-option status
+set -g status-justify left
+set -g status-bg default
+set -g status-fg default
+set -g status-interval 2
+set -g message-fg black
+set -g message-bg yellow
+set -g message-command-fg blue
+set -g message-command-bg black
+set -g automatic-rename on
+setw -g mode-bg colour6
+setw -g mode-fg colour0
+setw -g window-status-format "#[fg=colour3] •#[fg=colour8] #W "
+setw -g window-status-current-format "#[fg=colour2] •#[fg=colour7] #W "
+setw -g window-status-current-attr dim
+set -g status-position bottom
+set -g status-justify centre
+set -g status-left "  #[fg=colour3]• #[fg=colour2]• #[fg=colour4]•"
+set -g status-right " #[fg=colour4] •#[fg=colour8] #S "
 
 
 # Plugins (should be at the bottom)
@@ -49,6 +70,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
