--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,23 +41,23 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 # Theme
 #source-file "~/Dev-Config/tmux-theme-noirblaze/noirblaze-tmux.dark.default.v0.tmuxtheme"
 #source-file "~/Dev-Config/tmux-theme/challenger-deep.tmuxtheme"
-set -g pane-border-fg colour0
-set -g pane-active-border-fg colour238
+set -g pane-border-style fg=colour0
+set -g pane-active-border-style fg=colour238
 bind-key b set-option status
 set -g status-justify left
-set -g status-bg default
-set -g status-fg default
+set -g status-style bg=default
+set -g status-style fg=default
 set -g status-interval 2
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
+set -g message-style fg=black
+set -g message-style bg=yellow
+set -g message-command-style fg=blue
+set -g message-command-style bg=black
 set -g automatic-rename on
-setw -g mode-bg colour6
-setw -g mode-fg colour0
+setw -g mode-style bg=colour6
+setw -g mode-style fg=colour0
 setw -g window-status-format "#[fg=colour3] •#[fg=colour8] #W "
 setw -g window-status-current-format "#[fg=colour2] •#[fg=colour7] #W "
-setw -g window-status-current-attr dim
+setw -g window-status-current-style dim
 set -g status-position bottom
 set -g status-justify centre
 set -g status-left "  #[fg=colour3]• #[fg=colour2]• #[fg=colour4]•"
