--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -88,7 +88,7 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true
+fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -117,7 +117,7 @@ fade-out-step = 0.1;
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 1
+inactive-opacity = 1;
 # inactive-opacity = 0.95;
  
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
@@ -125,7 +125,7 @@ inactive-opacity = 1
 frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
-menu-opacity = 1.0
+#menu-opacity = 1.0
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -209,12 +209,12 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = 'glx'
-backend = "xrender";
+backend = "glx";
+#backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
-vsync = true
+vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -226,7 +226,7 @@ vsync = true
 mark-wmwin-focused = true;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
-mark-ovredir-focused = false;
+# mark-ovredir-focused = false;
 # mark-ovredir-focused = true;
 
 # Try to detect windows with rounded corners and don't consider them 
@@ -245,7 +245,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 0
+refresh-rate = 0;
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
@@ -259,13 +259,13 @@ refresh-rate = 0
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy, 
 # provided that the WM supports it.
 #
-# use-ewmh-active-win = false
+use-ewmh-active-win = true;
 
 # Unredirect all windows if a full-screen opaque window is detected, 
 # to maximize performance for full-screen windows. Known to cause flickering 
 # when redirecting/unredirecting windows.
 #
-# unredir-if-possible = false
+unredir-if-possible = false;
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
@@ -277,14 +277,14 @@ refresh-rate = 0
 # in the same group focused at the same time.
 #
 # detect-transient = false
-detect-transient = true
+detect-transient = true;
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same 
 # group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if 
 # detect-transient is enabled, too.
 #
 # detect-client-leader = false
-detect-client-leader = true
+detect-client-leader = true;
 
 # Resize damaged region by a specific number of pixels. 
 # A positive value enlarges it while a negative one shrinks it. 
@@ -309,14 +309,14 @@ detect-client-leader = true
 # practically happened) and may not work with blur-background. 
 # My tests show a 15% performance boost. Recommended.
 #
-# glx-no-stencil = false
+glx-no-stencil = true;
 
 # GLX backend: Avoid rebinding pixmap on window damage. 
 # Probably could improve performance on rapid window content changes, 
 # but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
 # Recommended if it works.
 #
-# glx-no-rebind-pixmap = false
+glx-no-rebind-pixmap = true;
 
 # Disable the use of damage information. 
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
@@ -324,13 +324,13 @@ detect-client-leader = true
 # The opposing option is use-damage
 #
 # no-use-damage = false
-use-damage = true
+use-damage = true;
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw 
 # calls are finished before picom starts drawing. Needed on nvidia-drivers 
 # with GLX backend for some users.
 #
-# xrender-sync-fence = false
+xrender-sync-fence = true;
 
 # GLX backend: Use specified GLSL fragment shader for rendering window contents. 
 # See `compton-default-fshader-win.glsl` and `compton-fake-transparency-fshader-win.glsl` 
@@ -415,7 +415,7 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 1; }
