--- a/polybar/config
+++ b/polybar/config
@@ -397,19 +397,26 @@ label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
 
 menu-0-0 = reboot
-menu-0-0-exec = menu-open-1
+menu-0-0-exec = #powermenu.open.1
 menu-0-1 = power off
-menu-0-1-exec = menu-open-2
+menu-0-1-exec = #powermenu.open.2
+menu-0-2 = hibernate
+menu-0-2-exec = #powermenu.open.3
 
 menu-1-0 = cancel
-menu-1-0-exec = menu-open-0
+menu-1-0-exec = #powermenu.open.0
 menu-1-1 = reboot
-menu-1-1-exec = reboot
+menu-1-1-exec = systemctl reboot
 
 menu-2-0 = power off
-menu-2-0-exec = poweroff
+menu-2-0-exec = systemctl poweroff
 menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
+menu-2-1-exec = #powermenu.open.0
+
+menu-3-0 = hibernate
+menu-3-0-exec = systemctl hibernate
+menu-3-1 = cancel
+menu-3-1-exec = #powermenu.open.0
 
 [settings]
 screenchange-reload = true
