--- a/polybar/config
+++ b/polybar/config
@@ -55,12 +55,11 @@ height = 29
 wm-restack = bspwm
 modules-left = bspwm
 modules-center = xwindow 
-modules-right = xkeyboard filesystem pulseaudio memory cpu eth temperature date powermenu
+modules-right = xkeyboard filesystem pulseaudio memory cpu temperature eth date powermenu
 cursor-click = pointer
 cursor-scroll = ns-resize
 tray-position = right
 tray-padding = 2
-tray-background = ${colors.background}
 
 
 [bar/example]
@@ -97,6 +96,8 @@ modules-right = filesystem pulseaudio memory cpu eth temperature date powermenu
 
 tray-position = right
 tray-padding = 2
+tray-detached = true
+tray-offset-x = ${self.radius}
 
 ;wm-restack = bspwm
 ;wm-restack = i3
