--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,6 +38,10 @@ set -ga terminal-overrides ",*256col*:Tc"
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 
+#Fix lag issues
+set -s escape-time 0
+
+
 # Theme
 #source-file "~/Dev-Config/tmux-theme-noirblaze/noirblaze-tmux.dark.default.v0.tmuxtheme"
 #source-file "~/Dev-Config/tmux-theme/challenger-deep.tmuxtheme"
