--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,37 +34,23 @@ set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
 
-# Bind key mapping to realod tmux config (prefix+R) 
+# Bind key mapping to realod tmux config (prefix+R)
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 
-#Fix lag issues
+# Fix lag issues
 set -s escape-time 0
 
 
 # Theme
-#source-file "~/Dev-Config/tmux-theme-noirblaze/noirblaze-tmux.dark.default.v0.tmuxtheme"
-#source-file "~/Dev-Config/tmux-theme/challenger-deep.tmuxtheme"
-#set -g pane-border-style fg=colour0
-#set -g pane-active-border-style fg=colour238
 bind-key b set-option status
 set -g status-justify left
 set -g status-style bg=default
 set -g status-style fg=default
 set -g status-interval 2
-#set -g message-style fg=black
-#set -g message-style bg=yellow
-#set -g message-command-style fg=blue
-#set -g message-command-style bg=black
 set -g automatic-rename on
-#setw -g mode-style bg=colour6
-#setw -g mode-style fg=colour0
 setw -g window-status-format "#[fg=colour8]»#[fg=colour8] #W"
 setw -g window-status-current-format "#[fg=colour2]»#[fg=colour7] #W"
-#setw -g window-status-current-style dim
-#set -g status-position bottom
-#set -g status-justify centre
-#set -g status-left "#[fg=colour3]• #[fg=colour2]• #[fg=colour4]•"
 set -g status-left ""
 set -g status-right "#[fg=colour7]›#[fg=colour7] #S"
 
@@ -76,6 +62,9 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+# NOTE: Make sure you run `<leader> I` to fetch (install) the plugins and source them.
+
+# NOTE: To use continuum and resurrect use `<leader> <Ctrl-s>` to save a session and `<leader> <Ctrl-r>` to restore a session.
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
