--- a/polybar/config
+++ b/polybar/config
@@ -49,7 +49,7 @@ height = 29
 wm-restack = bspwm
 modules-left = bspwm
 modules-center = xwindow
-modules-right = xkeyboard filesystem pulseaudio memory cpu temperature eth date powermenu
+modules-right = eth xkeyboard filesystem pulseaudio memory cpu temperature date powermenu
 cursor-click = pointer
 cursor-scroll = ns-resize
 tray-position = right
