more keymappings and some cleanup

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -377,7 +377,7 @@ font_size 10
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell false
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
