polybar modules (cava and a timer)

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -47,9 +47,9 @@ offset-x = 8%
 width = 84%
 height = 29
 wm-restack = bspwm
-modules-left = bspwm
+modules-left = bspwm info-cava
 modules-center = xwindow
-modules-right = eth xkeyboard filesystem pulseaudio memory cpu temperature date powermenu
+modules-right = timer xkeyboard filesystem pulseaudio memory cpu temperature date powermenu
 cursor-click = pointer
 cursor-scroll = ns-resize
 tray-position = right
@@ -64,6 +64,7 @@ tray-padding = 2
 type = internal/xwindow
 label = %title:0:60:...%
 label-underline = ${colors.underline}
+
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -400,3 +401,23 @@ margin-top = 0
 margin-bottom = 0
 
 ; vim:ft=dosini
+
+[module/timer]
+type = custom/script
+exec = ~/.config/polybar/scripts/polybar-timer.sh tail 'timer' 5
+tail = true
+click-left = ~/.config/polybar/scripts/polybar-timer.sh new 25 'minutes left' 'paused' 'notify-send "Session finished"' ; ~/.config/polybar/scripts/polybar-timer.sh update %pid%
+click-middle = ~/.config/polybar/scripts/polybar-timer.sh cancel ; ~/.config/polybar/scripts/polybar-timer.sh update %pid%
+click-right = ~/.config/polybar/scripts/polybar-timer.sh togglepause ; ~/.config/polybar/scripts/polybar-timer.sh update %pid%
+scroll-up = ~/.config/polybar/scripts/polybar-timer.sh increase 60 || increase 60 || ~/.config/polybar/polybar-timer.sh new 1 'TIMER' 'PAUSED' 'notify-send -u critical "Timer expired."' ; ~/.config/polybar/polybar-timer.sh update %pid%
+scroll-down = ~/.config/polybar/scripts/polybar-timer.sh increase -60 ; ~/.config/polybar/scripts/polybar-timer.sh update %pid% 
+format-prefix = " "
+format-prefix-foreground = ${colors.text-alt}
+format-underline = ${colors.underline}
+
+
+[module/info-cava]
+type = custom/script
+exec = ~/.config/polybar/scripts/info-cava.py -b 12 -e 535353,606060,6e6e6e,7c7c7c,8a8a8a,999999,a8a8a8,b7b7b7,c6c6c6,d5d5d5,e5e5e5,f5f5f5
+tail = true
+format-foreground = ${colors.text-alt}
