--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,6 +7,7 @@
 #: characters.
 
 font_family      JetBrains Mono
+# font_family      Noto Sans Mono
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
