update picom settings, nvim lsp settings and arch dependencies install script

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -66,6 +66,9 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
+  "n:w:Firefox",
+  "n:w:*Chrome*",
+  "n:w:*Chromium*",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
