Additional keyboard (language) layout for Arch, better colors for the kitty, starship and zsh

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,4 +1,4 @@
 [character]
-success_symbol = "[I](bold) [❯](bold green)"
-error_symbol = "[I](bold) [❯](bold green)"
+success_symbol = "[I](bold) [❯](bold red)"
+error_symbol = "[I](bold) [❯](bold red)"
 vicmd_symbol = "[N](bold) [❮](bold green)"
