--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -36,11 +36,11 @@ font-2 = siji:pixelsize=13;1
 
 background = ${colors.background}
 foreground = ${colors.text}
-radius = 3.5
+; Radius remove untill polybar 3.7 makes the tray detachable (rounded corners don't work right now with it)
+; radius = 3.5
 padding-left = 0
 padding-right = 2
-module-margin-left = 2
-module-margin-right = 2
+module-margin = 2
 line-size = 3
 offset-y = 10
 offset-x = 8%
@@ -52,12 +52,18 @@ modules-center = xwindow
 modules-right = timer xkeyboard filesystem pulseaudio memory cpu temperature date powermenu
 cursor-click = pointer
 cursor-scroll = ns-resize
+
 tray-position = right
+; tray-detached = true
 tray-padding = 2
+; tray-offset-x = -800
 ;override-redirect = true
 ;line-color = #f00
-;border-size = 4
-;border-color = #00000000
+; border-size = 4
+; border-color = #00000000
+
+; [module/tray]
+; type = internal/tray
 
 
 [module/xwindow]
