Better polybar colors

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -191,12 +191,12 @@ ramp-volume-2 = 
 click-right = pavucontrol
 
 bar-volume-width = 13
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
+bar-volume-foreground-0 = #00ff77
+bar-volume-foreground-1 = #00ff77
+bar-volume-foreground-2 = #00ff77
+bar-volume-foreground-3 = #00ff77
+bar-volume-foreground-4 = #00ff77
+bar-volume-foreground-5 = #ff7700
 bar-volume-foreground-6 = ${colors.accent}
 bar-volume-gradient = false
 bar-volume-indicator = |
