--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,6 +7,8 @@
 #: characters.
 
 font_family      JetBrains Mono
+# font_family      Iosevka Semibold
+# font_family      SFMono Nerd Font Mono
 # font_family      Noto Sans Mono
 # bold_font        auto
 # italic_font      auto
