More specific kitty fonts

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,13 +6,13 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrains Mono
+font_family      JetBrains Mono Regular
 # font_family      Iosevka Semibold
 # font_family      SFMono Nerd Font Mono
 # font_family      Noto Sans Mono
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
