OS specific kitty.conf (one for mac and a default one for Arch Linux

--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -1338,5 +1338,5 @@ window_padding_width 13
 
 # }}}
 
-include ./noirblaze-theme.conf
+include ../noirblaze-theme.conf
 #include ./kitty-themes/themes/Dracula.conf
