Configuration for kitty and some settings for a 4k monitor

--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -8,7 +8,7 @@
 
 font_family      JetBrains Mono Regular
 # font_family      Iosevka Semibold
-# font_family      SFMono Nerd Font Mono
+# font_family      Liga SFMonoNerdFont
 # font_family      Noto Sans Mono
 bold_font        JetBrains Mono Bold
 italic_font      JetBrains Mono Italic
@@ -26,7 +26,7 @@ bold_italic_font JetBrains Mono Bold Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 10
+font_size 11
 
 #: Font size (in pts)
 
@@ -1338,5 +1338,15 @@ window_padding_width 13
 
 # }}}
 
-include ../noirblaze-theme.conf
+# include ../noirblaze-theme.conf
 #include ./kitty-themes/themes/Dracula.conf
+
+
+# noirblaze now comes with kitty
+# to use it, run:
+# kitty +kitten themes --cache-age 0 --reload-in=all
+# BEGIN_KITTY_THEME
+# noirblaze
+include current-theme.conf
+# END_KITTY_THEME
+
