--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -6,13 +6,18 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrains Mono Regular
+# font_family      JetBrains Mono Regular
+# bold_font        JetBrains Mono Bold
+# italic_font      JetBrains Mono Italic
+# bold_italic_font JetBrains Mono Bold Italic
+
+font_family      Liga SFMono Nerd Font Regular
+bold_font        Liga SFMono Nerd Font Bold
+italic_font      Liga SFMono Nerd Font Bold
+bold_italic_font Liga SFMono Nerd Font Bold Italic
+
 # font_family      Iosevka Semibold
-# font_family      Liga SFMonoNerdFont
 # font_family      Noto Sans Mono
-bold_font        JetBrains Mono Bold
-italic_font      JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -50,7 +55,8 @@ font_size 11
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-# adjust_line_height  0
+# Setting (110%) for Liga SFMono
+adjust_line_height  110%
 # adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
