--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -6,15 +6,15 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      JetBrains Mono Regular
-# bold_font        JetBrains Mono Bold
-# italic_font      JetBrains Mono Italic
-# bold_italic_font JetBrains Mono Bold Italic
+font_family      JetBrains Mono Regular
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
 
-font_family      Liga SFMono Nerd Font Regular
-bold_font        Liga SFMono Nerd Font Bold
-italic_font      Liga SFMono Nerd Font Bold
-bold_italic_font Liga SFMono Nerd Font Bold Italic
+# font_family      Liga SFMono Nerd Font Regular
+# bold_font        Liga SFMono Nerd Font Bold
+# italic_font      Liga SFMono Nerd Font Bold
+# bold_italic_font Liga SFMono Nerd Font Bold Italic
 
 # font_family      Iosevka Semibold
 # font_family      Noto Sans Mono
@@ -56,7 +56,7 @@ font_size 11
 #: LTR, which FriBidi expects for terminals.
 
 # Setting (110%) for Liga SFMono
-adjust_line_height  110%
+# adjust_line_height  110%
 # adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
