Fix to zathura config, new font for kitty

--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -6,10 +6,15 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrains Mono Regular
-bold_font        JetBrains Mono Bold
-italic_font      JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
+font_family      Berkeley Mono Regular
+bold_font        Berkeley Mono Bold
+italic_font      Berkeley Mono Italic
+bold_italic_font Berkeley Mono Bold Italic
+
+# font_family      JetBrains Mono Regular
+# bold_font        JetBrains Mono Bold
+# italic_font      JetBrains Mono Italic
+# bold_italic_font JetBrains Mono Bold Italic
 
 # font_family      Liga SFMono Nerd Font Regular
 # bold_font        Liga SFMono Nerd Font Bold
@@ -55,7 +60,7 @@ font_size 11
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-# Setting (110%) for Liga SFMono
+# Setting (110%) for Liga SFMono + Berkeley Mono
 # adjust_line_height  110%
 # adjust_column_width 0
 
