Switch to oxide color theme

--- a/kitty/arch/current-theme.conf
+++ b/kitty/arch/current-theme.conf
@@ -5,14 +5,14 @@
 #: The basic colors
 
 foreground                      #d5d5d5
-background                      #121212
-selection_foreground            #121212
+background                      #070e11
+selection_foreground            #070e11
 selection_background            #b0b0b0
 
 
 #: Cursor colors
 
-cursor              #ff0088
+cursor              #00d992
 cursor_text_color   background
 
 
@@ -22,15 +22,15 @@ url_color           #b0b0b0
 
 #: kitty window border colors and terminal bell colors
 
-active_border_color     #ff0088
-inactive_border_color   #323232
-bell_border_color       #ff0088
+active_border_color     #00d992
+inactive_border_color   #0e1618
+bell_border_color       #00d992
 
 
 #: Tab bar colors
 
 active_tab_foreground   #d5d5d5
-active_tab_background   #121212
+active_tab_background   #070e11
 inactive_tab_foreground #b4b4b4
 inactive_tab_background #323232
 
@@ -38,16 +38,16 @@ inactive_tab_background #323232
 #: The basic 16 colors
 
 #: black
-color0 #121212
+color0 #070e11
 color8 #737373
 
 #: red
-color1 #ff0088
-color9 #FD319E
+color1 #fa5e86
+color9 #ff0088
 
 #: green
-color2  #00ff77
-color10 #FD319E
+color2  #00d992
+color10 #00ff77
 
 #: yellow
 color3  #ffffff
@@ -73,7 +73,7 @@ color15 #f5f5f5
 #: Colors for marks (marked text in the terminal)
 
 mark1_foreground #121212
-mark1_background #787878
+mark1_background #070e11
 
 mark2_foreground #121212
 mark2_background #7a7a7a
