--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -563,7 +563,7 @@ window_padding_width 13
 
 #: The margin to the left and right of the tab bar (in pts)
 
-# tab_bar_style fade
+tab_bar_style separator
 
 #: The tab bar style, can be one of: fade, separator, powerline, or
 #: hidden. In the fade style, each tab's edges fade into the
@@ -1063,6 +1063,12 @@ window_padding_width 13
 #: options. For example, the above alias changes the default value of
 #: kitty +kitten hints --hints-offset to zero for all mappings,
 #: including the builtin ones.
+
+
+# Search in less (case insensitive)
+map ctrl+shift+f launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less -i +G -R
+# Search in fzf
+# map ctrl+shift+f launch --type=overlay --stdin-source=@screen_scrollback /usr/bin/fzf --no-sort --no-mouse --exact -i
 
 #: Clipboard {{{
 
