--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,14 +17,14 @@
 ;==========================================================
 
 [colors]
-background = #121212
-background-alt = #323232
-accent = #ff0088
+background = #070e11
+background-alt = #121b1d
+accent = #00d992
 text = #f5f5f5
-text-alt = #535353
+text-alt = #3a3649
 underline = #323232
-icon = #535353
-alert = #ff0088
+icon = #3a3649
+alert = #00d992
 
 
 [bar/main]
@@ -47,9 +47,9 @@ offset-x = 8%
 width = 84%
 height = 29
 wm-restack = bspwm
-modules-left = bspwm info-cava
+modules-left = bspwm timer xkeyboard info-cava
 modules-center = xwindow
-modules-right = timer xkeyboard filesystem pulseaudio memory cpu temperature date powermenu
+modules-right = eth filesystem pulseaudio memory cpu temperature date powermenu
 cursor-click = pointer
 cursor-scroll = ns-resize
 
@@ -95,7 +95,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#ff0088}%mountpoint%%{F-}: %percentage_used%%
+label-mounted = %{F#00d992}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.text-alt}
 label-mounted-underline = ${colors.underline}
@@ -141,8 +141,8 @@ label = %percentage_used%%
 
 [module/eth]
 type = internal/network
-interface = enp4s0
-interval = 3.0
+interface = enp2s0
+interval = 1.0
 
 format-connected-underline = ${colors.underline}
 format-connected-prefix = " "
@@ -191,11 +191,11 @@ ramp-volume-2 = 
 click-right = pavucontrol
 
 bar-volume-width = 13
-bar-volume-foreground-0 = #00ff77
-bar-volume-foreground-1 = #00ff77
-bar-volume-foreground-2 = #00ff77
-bar-volume-foreground-3 = #00ff77
-bar-volume-foreground-4 = #00ff77
+bar-volume-foreground-0 = #ff0088
+bar-volume-foreground-1 = #ff0088
+bar-volume-foreground-2 = #ff0088
+bar-volume-foreground-3 = #ff0088
+bar-volume-foreground-4 = #ff7700
 bar-volume-foreground-5 = #ff7700
 bar-volume-foreground-6 = ${colors.accent}
 bar-volume-gradient = false
