Fix kitty config to use the (now) built-in noirbuddy-oxide theme

--- a/kitty/arch/current-theme.conf
+++ b/kitty/arch/current-theme.conf
@@ -1,5 +1,7 @@
-## name: noirblaze
+## name: noirbuddy-oxide
 ## author: Dimitar Dimitrov (https://github.com/n1ghtmare)
+## license: MIT
+## blurb: A dark minimal theme based on the neovim noirbuddy theme system with a touch of oxide
 
 
 #: The basic colors
