--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -1363,7 +1363,7 @@ map ctrl+shift+f launch --stdin-source=@screen_scrollback --stdin-add-formatting
 # to use it, run:
 # kitty +kitten themes --cache-age 0 --reload-in=all
 # BEGIN_KITTY_THEME
-# noirblaze
+# noirbuddy-oxide
 include current-theme.conf
 # END_KITTY_THEME
 
