Trailing cursor effect for kitty

--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -1358,6 +1358,7 @@ map ctrl+shift+f launch --stdin-source=@screen_scrollback --stdin-add-formatting
 # include ../noirblaze-theme.conf
 #include ./kitty-themes/themes/Dracula.conf
 
+cursor_trail 3
 
 # noirblaze now comes with kitty
 # to use it, run:
