Change kitty font and cursor trail effect, add alias for grep with colors

--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -6,10 +6,16 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Berkeley Mono Regular
-bold_font        Berkeley Mono Bold
-italic_font      Berkeley Mono Italic
-bold_italic_font Berkeley Mono Bold Italic
+# TX-02-SemiCondensed is actually a modified (semi-condensed) version of Berkeley Mono
+font_family      TX-02
+# bold_font        TX-02-BoldSemiCondensed
+# italic_font      TX-02-ObliqueSemiCondensed
+# bold_italic_font TX-02-BoldSemiCondensedOblique
+
+# font_family      Berkeley Mono Regular
+# bold_font        Berkeley Mono Bold
+# italic_font      Berkeley Mono Italic
+# bold_italic_font Berkeley Mono Bold Italic
 
 # font_family      JetBrains Mono Regular
 # bold_font        JetBrains Mono Bold
@@ -1358,7 +1364,7 @@ map ctrl+shift+f launch --stdin-source=@screen_scrollback --stdin-add-formatting
 # include ../noirblaze-theme.conf
 #include ./kitty-themes/themes/Dracula.conf
 
-cursor_trail 3
+cursor_trail 1
 
 # noirblaze now comes with kitty
 # to use it, run:
